# thread-manager-rs

./: Cargo.toml  LICENSE  README.md
benches/: algorithms.rs  bench.rs  benchmark.rs  small_bench.rs
src/: assert.rs  channel.rs  dispatch.rs  iterator.rs  lib.rs  looper.rs  main.rs  manager.rs  order.rs  signals.rs  status.rs  types.rs  worker.rs
tests/: resize_test.rs  result_test.rs
