# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "thread-manager"
description = "Simple and efficient way to manage a pool of threads for executing jobs in parallel."
repository = "https://github.com/syn-chromatic/thread-manager-rs"
authors = ["Synchromatic <synchromatic.github@gmail.com>"]
categories = ["Concurrency"]
keywords = ["thread", "pool", "manager", "parallel", "concurrent"]
version = "0.3.0"
edition = "2021"
license = "MIT"
