# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "thread-manager"
description = "A streamlined Rust library for efficient thread pooling and parallel job execution, designed for simplicity, flexibility, and performance."
repository = "https://github.com/syn-chromatic/thread-manager-rs"
authors = ["Synchromatic <synchromatic.github@gmail.com>"]
categories = ["Concurrency"]
keywords = ["thread", "pool", "manager", "parallel", "concurrent"]
version = "1.0.0"
edition = "2021"
license = "MIT"


[dependencies]
crossbeam-channel = "0.5.11"

